Sat Nov 23 08:23:23 2013  Aman Gupta <ruby@tmm1.net>

	* lib/set.rb (class SortedSet): Fix source_location for methods
	  defined via eval.

Sat Nov 23 03:44:03 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master dcce4ff.  Important changes
	  in this commit:

	  Remove automatic detection of gem dependencies files.  This prevents a
	  security hole as described in [ruby-core:58490]

	  Fixed bugs for installing git gems.

	* test/rubygems:  ditto.

Fri Nov 22 22:30:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power):
	  Round the result value only if the precision is given.

Fri Nov 22 17:20:50 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (str_transcode0): don't scrub invalid chars if
	  str.encode doesn't have explicit invalid: :replace.
	  workaround fix for see #8995

Fri Nov 22 17:11:26 2013  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/intern.h, internal.h: Expose rb_gc_count().

Fri Nov 22 17:07:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.gemspec: version 1.2.2.

Fri Nov 22 17:04:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_data_type):
	  Use RUBY_TYPED_FREE_IMMEDIATELY only if it is available.

Fri Nov 22 16:49:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): Round the result value.
	  [Bug #8818] [ruby-core:56802]

	* test/bigdecimal/test_bigdecimal.rb: Add a test for the above fix.

Fri Nov 22 16:25:43 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_set_increment): accept minimum additional page number.

	* gc.c (gc_after_sweep): allocate pages to allocate at least
	   RUBY_HEAP_MIN_SLOTS.
	   [Bug #9137]

Fri Nov 22 16:19:52 2013  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/intern.h (rb_gc_set_params): Deprecate
	  rb_gc_set_params because it's only used in ruby internal.

	* internal.h (ruby_gc_set_params): Declare rb_gc_set_params's